# Cosmic

./: .buildpacks  .gitignore  .travis.yml  Cargo.toml  LICENSE  Procfile  README.md  app.json  bot_chat.py  bot_cmds.py  bot_crash_detect.py  bot_log.py  bot_lyrics.py  bot_lyrics_test.py  bot_main.py  bot_memes.py  bot_memes_test.py  bot_mp3.py  bot_music.py  bot_pirate.py  bot_pirate_test.py  bot_test.py  bot_wiki.py  bot_wiki_test.py  cosmic.aiml  cosmic_brain.json  requirements.txt  token.txt
.github/: FUNDING.yml
aiml/: 20q.aiml  binary.aiml  botcompare.aiml  hangman.aiml  tictactoe.aiml  whatday_eng.aiml  whatday_usa.aiml
src/: ai.rs  events.rs  http.rs  main.rs  storage.rs  utils.rs
src/command/: cmd_meme.rs  cmd_play.rs  cmd_say.rs  cmd_skip.rs  cmd_stop.rs  cmd_torrent.rs  cmd_wiki.rs  mod.rs  say.rs
src/imgflip/: api.rs  mod.rs  types.rs
src/torrent/: api.rs  mod.rs  tests.rs  types.rs
src/wiki/: api.rs  mod.rs  tests.rs  types.rs
